--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.0.5
+django-filter==21.1
 djangorestframework==3.13.1
 drf-yasg==1.20.0
+Faker==13.13.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
