--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -18,6 +18,7 @@ packaging==21.3
 psycopg2-binary==2.9.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.0
 ruamel.yaml==0.17.21
